--- a/app.json
+++ b/app.json
@@ -14,7 +14,8 @@
     "pages/login/index",
     "pages/auth/index",
     "pages/pay/index",
-    "pages/address/address"
+    "pages/address/address",
+    "pages/freight/freight"
   ],
   "window": {
     "backgroundTextStyle": "light",
