--- a/project.config.json
+++ b/project.config.json
@@ -137,6 +137,13 @@
 					"id": -1,
 					"name": "意见反馈",
 					"pathName": "pages/feedback/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "分类2",
+					"pathName": "pages/categoryBook/index",
 					"scene": null
 				}
 			]
