--- a/project.config.json
+++ b/project.config.json
@@ -146,6 +146,13 @@
 					"pathName": "pages/categoryBook/index",
 					"query": "categoryId=1",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/vip/index",
+					"pathName": "pages/vip/index",
+					"query": "categoryId=1",
+					"scene": null
 				}
 			]
 		}
