--- a/project.config.json
+++ b/project.config.json
@@ -153,6 +153,13 @@
 					"pathName": "pages/vip/index",
 					"query": "categoryId=1",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "运费券中心",
+					"pathName": "pages/freight/freight",
+					"query": "categoryId=1",
+					"scene": null
 				}
 			]
 		}
